# CompuCell3D

./: .gitignore
.kdev4/: CompuCell3D.kdev4
CompuCell3D/: CMakeLists.txt  CompuCell3D.kdev4
CompuCell3D/core/: CMakeLists.txt
CompuCell3D/core/BasicUtils/: BasicArray.h  BasicClassAccessor.h  BasicClassAccessorBase.h  BasicClassFactory.h  BasicClassFactoryBase.h  BasicClassGroup.h  BasicClassGroupArray.h  BasicClassGroupFactory.cpp  BasicClassGroupFactory.h  BasicClassRegistry.h  BasicDynamicClassFactory.cpp  BasicException.cpp  BasicException.h  BasicFileLocation.cpp  BasicFileLocation.h  BasicPluginInfo.cpp  BasicPluginInfo.h  BasicPluginManager.h  BasicPluginManager.h.in.linux  BasicPluginProxy.h  BasicUtils.h  CMakeLists.txt  ThreadException.h  debugHelpers.h  lock_helper.h  memory_include.h
CompuCell3D/core/CompuCell3D/: CC3D.h  CC3DEvents.h  CC3D_Main.h  CC3D_fwd.h  CC3D_plugin.h  CC3D_steppable.h  ClassRegistry.cpp  ClassRegistry.h  ParseData.h  ParserStorage.h  Plugin.h  PluginBase.h  PluginManager.h  PottsParseData.h  Serializer.h  SimObject.h  Simulator.cpp  Simulator.h  SteerableObject.h  Steppable.h  Terminate.h  helpers.h  mainSimple.cpp
CompuCell3D/core/PublicUtilities/: NumericalUtils.cpp  NumericalUtils.h  ParallelUtilsOpenMP.cpp  ParallelUtilsOpenMP.h  StringUtils.cpp  StringUtils.h  Vector3.h
CompuCell3D/core/Utils/: Coordinates3D.h  cldeque.h
CompuCell3D/core/XMLUtils/: CC3DXMLElement.cpp  CC3DXMLElement.h  CC3DXMLElementWalker.cpp  CC3DXMLElementWalker.h  CMakeLists.txt  XMLParserExpat.cpp  XMLParserExpat.h
(+324 files in other folders)
