
INCLUDE_DIRECTORIES ( 
    ${COMPUCELL3D_SOURCE_DIR}/core
    )

if(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
    SET(LIBS BasicUtilsStatic)
else(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
   SET(LIBS BasicUtilsShared)
endif(${CMAKE_SYSTEM_NAME} STREQUAL Windows)

SET(SRCS CC3DXMLElement.cpp CC3DXMLElementWalker.cpp)

ADD_SHARED_LIBRARY(XMLUtils ${SRCS} LINK_LIBRARIES ${LIBS})

INSTALL_FILES(/include/CompuCell3D/XMLUtils .h
   CC3DXMLElement
   CC3DXMLElementWalker
   XMLParserExpatLibDLLSpecifier
   XMLUtilsDLLSpecifier   
)

#ADD_LIBRARY(XMLUtils SHARED CC3DXMLElement.cpp CC3DXMLElementWalker.cpp)

# requires XMLParserExpat
if (COMPUCELL3D_TEST OR BUILD_CPP_ONLY_EXECUTABLE)
	SET(SRCS_XML_PARSER_EXPAT_LIB XMLParserExpat.cpp)
	ADD_SHARED_LIBRARY(XMLParserExpatLib ${SRCS_XML_PARSER_EXPAT_LIB} LINK_LIBRARIES ${EXPAT_LIBRARIES} XMLUtilsShared)
	INSTALL_TARGETS(/lib XMLParserExpatLibShared)
endif()